# Test_Tusk-Loading_and_resizing_the_image

./: .gitignore  README.md  pre-commit-config.yaml  pyproject.toml
web_app_img/: db.sqlite3  manage.py
web_app_img/web_app_img/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
web_app_img/work_pictures/: admin.py  apps.py  forms.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
web_app_img/work_pictures/migrations/: 0001_initial.py  0002_rename_icom_format_st_icom_format.py  0003_remove_icom_format_base64_alter_icom_format_icon_and_more.py  0004_rename_icom_format_iconformat.py  0005_picturesavevariations_delete_iconformat.py
web_app_img/work_pictures/templates/: main_page.html  upload_page_not_use.html
